--- a/style.css
+++ b/style.css
@@ -73,36 +73,32 @@ h1 {
 .about {
     margin-left: 170px;
     margin-top: 150px;
-    padding-right: 280px;
+    padding-right: 240px;
     text-align: justify;
 }
 
-#section-blog_section {
+#section-blog {
     margin-top: 80px;
     box-shadow: 10px;
-}
-
-.blog_section {
-    background-color: #e5e5e5;
     height: 780px;
 }
 
-.section_title {
+.section-design {
     text-align: center;
     margin-top: 150px;
 }
 
-.section_title h1 {
+.ssection-design h1 {
     color: #252525;
 }
 
-.section_title p {
+.section-design p {
     color: #676767;
     width: 500px;
     margin: 10px auto;
 }
 
-.recipies_blog {
+.recipies-blog {
     width: 100vw;
     height: auto;
     display: flex;
@@ -110,7 +106,7 @@ h1 {
     margin-top: 50px;
 }
 
-.blog_details {
+.blog-customize {
     width: 395px;
     background: #fff;
     margin: 0px 25px;
@@ -118,11 +114,11 @@ h1 {
     border-radius: 10px;
 }
 
-.blog_details h2 {
-    margin: 10px 0;
+.blog-customize h2 {
+    margin: 10px;
 }
 
-.recipies_blog img {
+.recipies-blog img {
     width: 350px;
     height: 256px;
 }
